--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,8 @@
       {
         "ts": "never"
       }
-    ]
+    ],
+    "no-param-reassign": "off"
   },
   "settings": {
     "import/resolver": {
